# log_searcher

./: .gitignore  Cargo.toml  README.md  build.sh  devjournal  index.js  install.sh  log_searcher.initd  log_searcher.service  package-lock.json  package.json  prepare_release.sh
config/: default.js.sample
lib/: file_resolver.js  file_searcher.js
src/: file_selector.rs  main.rs
