[package]
name = "log_searcher"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.0", default-features = false, features = ["miniz_oxide"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", features = ["serde"] }
rouille = "3.6.2"
os_pipe = "1.1.0"

